log
Thu 14 Sep 2023 04:17:58 PM UTC: 
 tests:  1|8
total_score: 0/70
8d44d36
Thu 14 Sep 2023 04:56:57 PM UTC: 
 treemap.c | 62 +++++++++++++++++++++++---------------------------------------
 1 file changed, 23 insertions(+), 39 deletions(-)
 tests:  4|7
total_score: 5/70
dc469e6
Thu 14 Sep 2023 05:03:19 PM UTC: 
 treemap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
0351dc9
Thu 14 Sep 2023 05:10:49 PM UTC: 
 treemap.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:57:52: error: expected ‘)’ before ‘{’ token
   57 |     }else if (tree->lower_than(aux->pair->key, key){
      |              ~                                     ^
      |                                                    )
treemap.c:60:3: error: expected expression before ‘}’ token
   60 |   }
      |   ^
Compilation failed
4b14b7b
Thu 14 Sep 2023 05:11:13 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:57:52: error: expected ‘)’ before ‘{’ token
   57 |     }else if (tree->lower_than(aux->pair->key, key){
      |              ~                                     ^
      |                                                    )
treemap.c:60:3: error: expected expression before ‘}’ token
   60 |   }
      |   ^
Compilation failed
870193a
Thu 14 Sep 2023 05:11:21 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
ca73ec9
Thu 14 Sep 2023 05:12:33 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
eca595b
Thu 14 Sep 2023 05:19:50 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
131f260
Thu 14 Sep 2023 05:27:57 PM UTC: 
 treemap.c | 32 +++++++++++++++++++++++++++++++-
 1 file changed, 31 insertions(+), 1 deletion(-)
 tests:  0|0
7a41675
Thu 14 Sep 2023 05:28:37 PM UTC: 
 treemap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|0
aff67d3
Thu 14 Sep 2023 05:29:23 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
9cb1aed
Thu 14 Sep 2023 05:32:25 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
87e76e7
Thu 14 Sep 2023 05:35:08 PM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:164:1: error: control reaches end of non-void function [-Werror=return-type]
  164 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f4e2c35
Thu 14 Sep 2023 05:35:25 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  22|2
total_score: 50/70
6bd96d8
Thu 14 Sep 2023 05:37:37 PM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  25|1
total_score: 60/70
78be334
